Fixed invisible h2 in footer.

--- a/style.css
+++ b/style.css
@@ -5161,6 +5161,7 @@ sup > .ask-community-sup-icon {
 }
 
 .custom-footer-links-card h2 {
+  color: white;
   text-transform: uppercase;
 }
 
