--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -1008,6 +1008,7 @@ sup > .ask-community-sup-icon {
 }
 
 .custom-footer-links-card h2 {
+  color: white;
   text-transform: uppercase;
 }
 
